infra/k3s/applications/account/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
  namespace: app
  labels:
    app: account
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: account
