infra/k3s/applications/account/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.gaegaeting.app
      secretName: account-tls
  rules:
    - host: api.gaegaeting.app
      http:
        paths:
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: account
                port:
                  number: 2800
