infra/k3s/applications/account/base/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: account
  namespace: app
spec:
  entryPoints:
    - websecure
  routes:
    # 1) If Authorization header exists -> run forwardAuth
    - kind: Rule
      match: Host(`api.gaegaeting.app`) && PathPrefix(`/account`) && HeadersRegexp(`Authorization`, `.+`)
      priority: 1000
      middlewares:
        - name: account-forwardauth
      services:
        - name: account
          port: 2800

    # 2) Otherwise -> pass through without forwardAuth (public)
    - kind: Rule
      match: Host(`api.gaegaeting.app`) && PathPrefix(`/account`)
      priority: 900
      services:
        - name: account
          port: 2800
  tls:
    secretName: account-tls
