infra/k3s/applications/account/base/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: account-forward-auth
  namespace: app
spec:
  selector:
    matchLabels:
      app: account
  action: CUSTOM
  provider:
    name: auth-forward-auth
  rules:
    - when:
        - key: request.headers[authorization]
          values:
            - "*"
